rust rapidsnark submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = git@github.com:aptos-labs/rust_rapidsnark
 [submodule "rust-rapidsnark"]
 	path = rust-rapidsnark
-	url = git@github.com:aptos-labs/rust-rapidsnark
+	url = git@github.com:aptos-labs/rust-rapidsnark.git
