--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,8 @@ resolver = "2"
 
 members = [
     "prover",
-    "keyless/common",
-    "keyless/circuit",
+    "keyless-common",
+    "keyless/circuit"
 ]
 
 [workspace.package]
@@ -78,7 +78,7 @@ tower = "0.4.13"
 tower-http = { version = "0.5.1", features = ["cors"] }
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
-aptos-keyless-common = { path = "keyless/common" }
+aptos-keyless-common = { path = "keyless-common" }
 aptos-keyless-pepper-common = { path = "keyless/pepper/common" }
 aptos-keyless-pepper-service = { path = "keyless/pepper/service" }
 aptos-logger = { git = "https://github.com/aptos-labs/aptos-core" }
