--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "prover/rust-rapidsnark"]
 	path = prover/rust-rapidsnark
-	url = git@github.com:aptos-labs/rust-rapidsnark.git
+	url = https://github.com/zankard/rust-rapidsnark.git
